commiting first tutorial

--- a/tutorial/ct_reviews_txt.html
+++ b/tutorial/ct_reviews_txt.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Curbside Thai Reviews Page
-    Author: 
-    Date:   
+    Author: Brett F./E. Ruiz
+    Date: September 6 2018  
 
     Filename: ct_reviews.html
    -->
