--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Tutorial 5 links</h1>
+			<h1>HTML01 links</h1>
 			<nav class = "horizontal">
 				<ul>
           <li><a href = "./case1/jtc_index.html">Case 1</a></li>
